# Pycord

./: MANIFEST.in  codecov.yml  pyproject.toml
.github/workflows/: test.yml
discord/: bot.py
discordtool/: __main__.py  channel.py  client.py  cog.py  embeds.py  http.py  member.py  user.py
discordtool/commands/: context.py  core.py
discordtool/ext/bridge/: bot.py  context.py  core.py
discordtool/ext/commands/: bot.py  cog.py  context.py  converter.py  cooldowns.py  core.py  errors.py  flags.py  help.py
discordtool/ext/pages/: pagination.py
discordtool/ext/tasks/: __init__.py
discordtool/sinks/: errors.py
examples/: audio_recording.py  audio_recording_merged.py  background_task.py  background_task_asyncio.py  basic_async_bot.py  basic_bot.py  basic_voice.py  bridge_commands.py  converters.py  cooldown.py  create_private_emoji.py  custom_context.py  deleted.py  edits.py  modal_dialogs.py  new_member.py  reaction_roles.py  reply.py  secret.py  timeout.py  wait_for_event.py
examples/app_commands/: context_menus.py  info.py  slash_autocomplete.py  slash_basic.py  slash_cog.py  slash_cog_groups.py  slash_groups.py  slash_options.py  slash_perms.py
examples/views/: button_roles.py  channel_select.py  confirm.py  counter.py  dropdown.py  ephemeral.py  link.py  paginator.py  persistent.py  role_select.py  tic_tac_toe.py
pycord-2.4.1/discord/: client.py
pycord-2.4.1/examples/: basic_bot.py
requirements/: dev.txt  docs.txt
tests/: test_typing_annotated.py  test_utils.py
